--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -31,6 +31,14 @@ label {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); }
+  .t-button.disabled {
+    background: #639351;
+    text-shadow: 0px 0px 0px 0px;
+    -moz-text-shadow: 0px 0px 0px 0px;
+    -webkit-text-shadow: 0px 0px 0px 0px;
+    box-shadow: 0px 0px 0px 0px;
+    -moz-box-shadow: 0px 0px 0px 0px;
+    -webkit-box-shadow: 0px 0px 0px 0px; }
 
 .t-button:hover, .t-button:focus, .t-button:visited {
   color: #FFFFFF;
@@ -39,6 +47,11 @@ label {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75); }
+  .t-button:hover.disabled, .t-button:focus.disabled, .t-button:visited.disabled {
+    background: #639351;
+    box-shadow: 0px 0px 0px 0px;
+    -moz-box-shadow: 0px 0px 0px 0px;
+    -webkit-box-shadow: 0px 0px 0px 0px; }
 
 .statistic_button, .references_button {
   padding: 2px 15px;
@@ -63,6 +76,9 @@ body {
 
 p {
   position: relative; }
+
+a {
+  cursor: pointer; }
 
 .small_loading_image {
   width: 15px; }
@@ -342,17 +358,21 @@ footer {
 
 .talent_profile a.glyphicon {
   color: #FFFFFF; }
+
 .talent_profile p > a.edit.glyphicon {
   position: absolute;
   top: 5px;
   right: -25px; }
+
 .talent_profile .container {
   position: relative;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15); }
+
 .talent_profile .container:hover .change_cover_pic_container {
   display: block; }
+
 .talent_profile .cover_pic {
   position: absolute;
   top: 0px;
@@ -368,6 +388,7 @@ footer {
     width: 100%;
     height: auto;
     position: relative; }
+
 .talent_profile .change_cover_pic_container {
   position: absolute;
   top: 10px;
@@ -377,6 +398,7 @@ footer {
     font-size: 30px;
     cursor: pointer;
     color: #FFFFFF; }
+
 .talent_profile .profile_image_container {
   border-radius: 150px;
   -moz-border-radius: 150px;
@@ -409,8 +431,10 @@ footer {
     .talent_profile .profile_image_container .change_profile_image a {
       color: #fFFFFF;
       font-weight: 700; }
+
 .talent_profile .profile_image_container:hover .change_profile_image {
   display: block; }
+
 .talent_profile .user_profile_details {
   position: relative;
   height: 300px;
@@ -480,6 +504,7 @@ footer {
         width: 30px;
         height: auto;
         vertical-align: middle; }
+
 .talent_profile .profile_content_container {
   padding: 15px 0px;
   margin-top: 25px; }
@@ -747,6 +772,7 @@ footer {
   background: none !important;
   width: auto;
   max-width: 80%; }
+
 .video_modal_container .modal .modal-body {
   text-align: center !important; }
   .video_modal_container .modal .modal-body iframe {
@@ -763,7 +789,7 @@ footer {
       height: auto; }
 
 .static_pages_container {
-  background: url('../../site_images/talenthub.jpg') fixed;
+  background: url("../../site_images/talenthub.jpg") fixed;
   background-size: cover;
   margin-bottom: -60px;
   padding-bottom: 55px; }
@@ -807,7 +833,7 @@ footer {
         padding-left: 25px; }
 
 .settings_container {
-  background: url('../../site_images/talenthub.jpg') fixed;
+  background: url("../../site_images/talenthub.jpg") fixed;
   background-size: cover;
   margin-bottom: -60px;
   padding-bottom: 55px;
@@ -881,6 +907,7 @@ footer {
       min-width: 100%;
       width: 100%;
       height: auto; }
+
 .image_setting_container .profile_image_setting_container {
   width: 250px;
   margin: 0px auto; }
@@ -898,5 +925,146 @@ footer {
       height: auto;
       min-width: 300px; }
 
+/*------------------------------------------------------------------------------------------
+----------------------- Manager Side CSS styling -------------------------------------------
+--------------------------------------------------------------------------------------------*/
+.manager_app a {
+  text-decoration: none; }
+
+.manager_app .manager-profile-editPage .form-group .error_message_container {
+  margin-top: 5px; }
+  .manager_app .manager-profile-editPage .form-group .error_message_container .alert {
+    padding: 5px 15px; }
+
+.manager_app .manager-profile-editPage .career-history a.remove-year {
+  font-size: 12px;
+  color: #a94442;
+  display: block;
+  text-align: center;
+  margin-top: 5px; }
+
+.manager_app .manager-profile-editPage .career-history a.add-achievement {
+  font-size: 14px;
+  text-align: center;
+  display: inline-block;
+  padding: 5px; }
+
+.manager_app .manager-profile-editPage .career-history a.remove-achievement {
+  font-size: 20px;
+  color: #a94442;
+  display: inline-block;
+  padding: 5px; }
+
+.manager_app .manager-profile-editPage .career-history a.add-year {
+  font-size: 20px;
+  color: #203f15;
+  display: inline-block;
+  padding: 5px; }
+
+.manager_app .view_manager_profile {
+  padding-top: 25px; }
+  .manager_app .view_manager_profile .search_bar {
+    background: #ffffff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border: 1px solid #a1a1a1; }
+    .manager_app .view_manager_profile .search_bar .form-control {
+      font-size: 16px;
+      font-weight: bold; }
+      .manager_app .view_manager_profile .search_bar .form-control::-webkit-input-placeholder, .manager_app .view_manager_profile .search_bar .form-control:-moz-placeholder, .manager_app .view_manager_profile .search_bar .form-control::-moz-placeholder, .manager_app .view_manager_profile .search_bar .form-control:-ms-input-placeholder {
+        color: #c00 !important; }
+  .manager_app .view_manager_profile .manager_profile_image_container {
+    position: relative;
+    padding-top: 100px;
+    border-bottom: 2px solid #FFFFFF;
+    margin-bottom: 15px; }
+    .manager_app .view_manager_profile .manager_profile_image_container .manager_cover_image {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      height: 100%;
+      width: 100%; }
+    .manager_app .view_manager_profile .manager_profile_image_container .manager_profile_image {
+      border-radius: 50%;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
+      overflow: hidden; }
+      .manager_app .view_manager_profile .manager_profile_image_container .manager_profile_image img {
+        width: auto;
+        height: auto;
+        max-width: 100%; }
+    .manager_app .view_manager_profile .manager_profile_image_container .manager_bio {
+      margin-top: 10px; }
+      .manager_app .view_manager_profile .manager_profile_image_container .manager_bio p {
+        font-size: 16px;
+        font-weight: 400; }
+      .manager_app .view_manager_profile .manager_profile_image_container .manager_bio .manager_name {
+        font-name: 18px;
+        font-weight: bold; }
+      .manager_app .view_manager_profile .manager_profile_image_container .manager_bio .manager_location {
+        color: #AAAAAA; }
+    .manager_app .view_manager_profile .manager_profile_image_container .verify_button_container {
+      margin-top: 55px;
+      width: 100%; }
+      .manager_app .view_manager_profile .manager_profile_image_container .verify_button_container .btn {
+        font-weight: bold;
+        font-size: 18px;
+        padding: 10px 15px;
+        height: auto; }
+  .manager_app .view_manager_profile .manager_profile_summary {
+    background: #ffffff;
+    padding: 15px 0px;
+    margin-bottom: 15px; }
+    .manager_app .view_manager_profile .manager_profile_summary p {
+      font-size: 16px;
+      padding: 0px 10px;
+      padding-bottom: 25px; }
+  .manager_app .view_manager_profile .manager_career_history {
+    background: #ffffff;
+    padding: 15px 0px; }
+    .manager_app .view_manager_profile .manager_career_history h1 {
+      margin-top: 0px;
+      padding: 0px 10px;
+      font-size: 20px; }
+    .manager_app .view_manager_profile .manager_career_history pre {
+      background: #FFFFFF;
+      border: none;
+      font-size: 16px;
+      padding: 0px 10px;
+      padding-bottom: 25px; }
+
+/*Styles for Pop Up Modal*/
+.screen_overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%; }
+
+.loading_pop_up_container {
+  position: fixed;
+  top: 30%;
+  left: 40%;
+  width: 20%;
+  min-height: 20%;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.85);
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 2px solid white; }
+  .loading_pop_up_container h2 {
+    font-size: 16px;
+    margin: 10px 0px;
+    padding: 5px 5px;
+    text-transform: uppercase; }
+  .loading_pop_up_container .loading_image {
+    text-align: center;
+    height: 100%;
+    min-height: 30px;
+    width: auto;
+    padding: 15px 5px; }
 
 /*# sourceMappingURL=main.css.map */
