--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -66,6 +66,27 @@ label {
   font-weight: 700;
   font-size: 18px; }
 
+.th-padding-10 {
+  padding: 10px; }
+
+.th-padding-15 {
+  padding: 15px; }
+
+.th-padding-bottom-15 {
+  padding-bottom: 15px; }
+
+.th-padding-bottom-25 {
+  padding-bottom: 25px; }
+
+.th-padding-top-15 {
+  padding-top: 15px; }
+
+.font-size-16, .font-size-16 p {
+  font-size: 16px; }
+
+.font-size-20, .font-size-20 p {
+  font-size: 20px; }
+
 .form-control.t-button {
   color: #FFFFFF; }
 
@@ -1033,6 +1054,25 @@ footer {
       font-size: 16px;
       padding: 0px 10px;
       padding-bottom: 25px; }
+
+.manager_app .page-heading {
+  font-size: 20px;
+  color: #000000;
+  margin-bottom: 25px;
+  padding-bottom: 0px; }
+
+.manager_app .white-background {
+  background: #FFFFFF; }
+
+.manager_app .verification-page p {
+  line-height: 150%;
+  margin-bottom: 0px; }
+
+.manager_app .verification-page .verification-button {
+  width: 100%;
+  text-align: center;
+  font-weight: 400;
+  padding: 15px 25px; }
 
 /*Styles for Pop Up Modal*/
 .screen_overlay {
