Added new verfication table and verificationFile tabel. Added model for both tables

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8792,9 +8792,12 @@ label {
 
 /*# sourceMappingURL=message.css.map */
 
-.error_message_container p, .error_message_container span {
-  color: #FF6347;
-  font-size: 0.9em; }
+.error_message_container {
+  margin-bottom: 0px; }
+  .error_message_container p, .error_message_container span {
+    color: #FF6347;
+    font-size: 0.9em;
+    margin-bottom: 5px; }
 
 /* ----------------------------------------------------*/
 /*  This Section is for Manage Part */
