Refactored code to make profile and verification work correctly

--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -1048,12 +1048,14 @@ footer {
       margin-top: 0px;
       padding: 0px 10px;
       font-size: 20px; }
-    .manager_app .view_manager_profile .manager_career_history pre {
+    .manager_app .view_manager_profile .manager_career_history p {
       background: #FFFFFF;
       border: none;
       font-size: 16px;
       padding: 0px 10px;
       padding-bottom: 25px; }
+      .manager_app .view_manager_profile .manager_career_history p span {
+        line-height: 200%; }
 
 .manager_app .page-heading {
   font-size: 20px;
