Implemented Agent verification part and verified verification part

--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -1015,6 +1015,16 @@ footer {
         width: auto;
         height: auto;
         max-width: 100%; }
+    .manager_app .view_manager_profile .manager_profile_image_container .verified_logo {
+      display: block;
+      position: absolute;
+      bottom: 0px;
+      right: 0px;
+      width: 75px;
+      height: auto; }
+      .manager_app .view_manager_profile .manager_profile_image_container .verified_logo img {
+        width: 100%;
+        height: auto; }
     .manager_app .view_manager_profile .manager_profile_image_container .manager_bio {
       margin-top: 10px; }
       .manager_app .view_manager_profile .manager_profile_image_container .manager_bio p {
