--- a/public/css/welcomepage.css
+++ b/public/css/welcomepage.css
@@ -6234,6 +6234,12 @@ h1, h2, h3, h4, h5, h6 {
 label {
   font-weight: 600; }
 
+.background-cream {
+  background-color: #f6f0d2; }
+
+.text-orange {
+  color: #ff7d00; }
+
 header {
   position: fixed;
   background-color: #203f15;
