--- a/resources/assets/lib/css/emails.css
+++ b/resources/assets/lib/css/emails.css
@@ -16,6 +16,12 @@ h1, h2, h3, h4, h5, h6 {
 label {
   font-weight: 600; }
 
+.background-cream {
+  background-color: #f6f0d2; }
+
+.text-orange {
+  color: #ff7d00; }
+
 .body {
   background: url("../site_images/talenthub.jpg") cover fixed; }
 
