--- a/resources/assets/sass/basic.scss
+++ b/resources/assets/sass/basic.scss
@@ -1,7 +1,9 @@
 
 //@import url("../../fonts/fonts.css");
+$color-orange : rgba(255,125,0,1);
+$color-cream : #f6f0d2;
 
-
+//Tags Styles
 body
 {
   padding:0px;
@@ -28,6 +30,7 @@ label
   font-weight: 600;
 }
 
+//Mixins
 @mixin box-shadow($horizontal, $vertical, $blur, $spread, $color)
 {
   box-shadow: $horizontal $vertical $blur $spread $color;
@@ -77,4 +80,19 @@ label
 @mixin font-size($font-size)
 {
   font-size: $font-size;
+}
+
+@mixin height($height){
+  height: $height;
+}
+
+
+//User Defined Classes
+.background-cream{
+  background-color:$color-cream;
+}
+
+.text-orange
+{
+  color:$color-orange;
 }
