--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -128,6 +128,7 @@ a {
 .small_loading_image {
   width: 15px; }
 
++
 .badge {
   font-size: 10px;
   background: #ff7d00;
@@ -422,7 +423,7 @@ footer {
   position: absolute;
   top: 0px;
   left: 0px;
-  height: 300px;
+  height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, 0.75);
   text-align: center;
@@ -482,8 +483,7 @@ footer {
 
 .talent_profile .user_profile_details {
   position: relative;
-  height: 300px;
-  max-height: 300px;
+  height: 100%;
   background: rgba(0, 0, 0, 0.5); }
   .talent_profile .user_profile_details p {
     width: 90%; }
@@ -519,7 +519,7 @@ footer {
     background: black; }
   .talent_profile .user_profile_details .about_container {
     padding-top: 80px;
-    height: 300px; }
+    padding-bottom: 80px; }
     .talent_profile .user_profile_details .about_container p {
       font-size: 16px;
       line-height: 180%;
@@ -758,26 +758,26 @@ footer {
   position: relative;
   margin: 0px;
   background: #f6f0d2; }
-  .profile_menu_container .container .row {
+  .profile_menu_container .container > .row {
     border: 1px solid #203f15;
     border-bottom: 1px solid #203f15;
     background: #FFFFFF; }
-    .profile_menu_container .container .row ul {
+    .profile_menu_container .container > .row ul {
       list-style: none;
       padding: 0px; }
-      .profile_menu_container .container .row ul li a {
+      .profile_menu_container .container > .row ul li a {
         color: #203f15;
         font-size: 12px;
         font-weight: 700;
         padding: 15px 25px;
         border-left: 1px solid #e4e4e4; }
-      .profile_menu_container .container .row ul li a:hover, .profile_menu_container .container .row ul li a:focus {
+      .profile_menu_container .container > .row ul li a:hover, .profile_menu_container .container > .row ul li a:focus {
         background: #203f15;
         color: #FFFFFF; }
-      .profile_menu_container .container .row ul li.active a {
+      .profile_menu_container .container > .row ul li.active a {
         background: #203f15;
         color: #FFFFFF; }
-      .profile_menu_container .container .row ul li:last-child a {
+      .profile_menu_container .container > .row ul li:last-child a {
         border-right: 1px solid #e4e4e4; }
 
 .database_content_container .container {
