--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -1008,6 +1008,7 @@ footer
             border:1px solid #dddddd;
             background:#f4f4f4;
             margin-bottom: 5px;
+            overflow: auto;
           }
         }
         .label
